--- a/1.5.P.html
+++ b/1.5.P.html
@@ -30,7 +30,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Кассир продал все билеты в первый ряд кинотеатра, причем по ошибке на одно из мест было продано два билета. Сумма номеров мест на всех этих билетах равна 857.<br><br>На какое место продано два билета?<br>(Номера мест – натуральные числа)</p>
+            <p>Кассир продал все билеты в первый ряд кинотеатра, причем по ошибке на одно из мест было продано два билета. Сумма номеров мест на всех этих билетах равна 857.<br><br>На какое место продано два билета?<br></p>
     </div>
     <div class="button">
     
