--- a/2.1.G.html
+++ b/2.1.G.html
@@ -28,7 +28,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>У Миши и Саши к предстоящему празднику имелось по одинаковой прямоугольной открытке. Каждый из мальчиков разрезал свою открытку на два прямоугольника равной площади и один из них выбросил, а один оставил себе. Оказалось, что периметр Мишиного прямоугольника равен 18 см, а Сашиного – 27 см. <br><br>	Найдите периметр и стороны прямоугольной открытки.<br>В ответ запишите сумму полученых значений.</p>
+            <p>У Миши и Саши к предстоящему празднику имелось по одинаковой прямоугольной открытке. Каждый из мальчиков разрезал свою открытку на два прямоугольника равной площади и один из них выбросил, а один оставил себе. Оказалось, что периметр Мишиного прямоугольника равен 18 см, а Сашиного – 27 см. <br><br>	Найди длины сторнон и периметр прямоугольной открытки.<br>В ответ запишите сумму полученых значений.</p>
     </div>
     <div class="button">
     
