--- a/2.2.G.html
+++ b/2.2.G.html
@@ -39,7 +39,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>На дороге между Цветочным и Солнечным городами Незнайка открыл бензоколонку, которая расположена в два раза ближе к Цветочному городу, чем к Солнечному. Однажды из Солнечного города в Цветочный выехал Винтик, а через некоторое время из Цветочного города в Солнечный выехал Шпунтик. Встретившись в закусочной автозаправки, они перекусили, заправили свои автомашины бензином и, распрощавшись, одновременно продолжили свой путь. Доехав до пунктов назначения, оба вспомнили, что забыли расплатиться с Незнайкой за бензин, и тут же повернули назад. К бензоколонке они прибыли одновременно. <br><br>Найдите отношение скорости Шпунтика к сскорости Винтика.<br>
+            <p>На дороге между Цветочным и Солнечным городами Незнайка открыл бензоколонку, которая расположена в два раза ближе к Цветочному городу, чем к Солнечному. Однажды из Солнечного города в Цветочный выехал Винтик, а через некоторое время из Цветочного города в Солнечный выехал Шпунтик. Встретившись в закусочной автозаправки, они перекусили, заправили свои автомашины бензином и, распрощавшись, одновременно продолжили свой путь. Доехав до пунктов назначения, оба вспомнили, что забыли расплатиться с Незнайкой за бензин, и тут же повернули назад. К бензоколонке они прибыли одновременно. <br><br>Найди отношение скорости Шпунтика к скорости Винтика.<br>
             (Скорости автомашин постоянны)</p>
     </div>
     <div class="button">
