--- a/2.4.G.html
+++ b/2.4.G.html
@@ -31,16 +31,13 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Продавец закупил партию ручек и продал их. При этом некоторые покупатели купили одну ручку за 13 рублей, а некоторые купили 3 ручки за 43 рублей. Оказалось, что с каждой покупки продавец получал одинаковую прибыль. <br><br>Найдите цену, по которой продавец закупил ручки.</p>
+            <p>Продавец закупил одинаковые партии ручек и партии карандашей. За карандаши он заплатил в два раза больше чем за ручки. В своём магазине он продавал ручки по 13 рублей за 1 штуку, а какрандаши по 43 за 3 штуки. Оказалось, что с каждой продажи продавец получал одинаковую прибыль. <br><br>Найдите цену, по которой продавец закупил ручки.</p>
     </div>
     <div class="button">
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      imageUrl: 'img/2.4.G.jpg',
-      imageWidth: 700,
-      imageHeight: 150,
-      customClass:'swal-wide',
+      text:'Пусть x - закупочная цена ручки. Тогда прибыль за одну ручку 13-х, а за 3 карандаша 43-3*2х. Составь уравнение и найди х.',
       confirmButtonColor: '#00ff00',
 })">Подсказка</a>
     
@@ -79,7 +76,7 @@
   
 
   <script type="text/javascript">
-    const answ = '15';
+    const answ = '6';
     const nul = '';
     var transport = window.location.hash.substring(1);
     let Score = Number(transport);
