--- a/3.1.P.html
+++ b/3.1.P.html
@@ -31,7 +31,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>В автобусе ехало не более ста пассажиров, причём число сидящих пассажиров было в 2 раза больше, чем стоящих. На остановке из автобуса вышло 5 % всех пассажиров.<br><br>Найдите число пассажиров, оставшихся в автобусе.</p>
+            <p>В автобусе ехало не более ста пассажиров, причём число сидящих пассажиров было в 2 раза больше, чем стоящих. На остановке из автобуса вышло 5 % всех пассажиров.<br><br>Найди число пассажиров, оставшихся в автобусе.</p>
             
     </div>
     <div class="button">
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Определи, чему кратно общее число пассажиров (всё исходя из данных в условии) и найди его.',
-      confirmButtonColor: '#800080',
+      confirmButtonColor: '#00ff00',
 })">Подсказка</a>
     
     </div>
