--- a/3.1.R.html
+++ b/3.1.R.html
@@ -30,7 +30,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>В автобусе ехало не более ста пассажиров, причём число сидящих пассажиров было в 2 раза больше, чем стоящих. На остановке из автобуса вышло 5 % всех пассажиров.<br><br>Найдите число пассажиров, оставшихся в автобусе.</p>
+            <p>В автобусе ехало не более ста пассажиров, причём число сидящих пассажиров было в 2 раза больше, чем стоящих. На остановке из автобуса вышло 5 % всех пассажиров.<br><br>Найди число пассажиров, оставшихся в автобусе.</p>
     </div>
     <form action="" method="get">
         <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
