--- a/3.2.P.html
+++ b/3.2.P.html
@@ -31,7 +31,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Вдоль скоростной автострады расположены мини-кафе «Вёсочка», «Чугунка», «Колорадо», «Стрекоза», «Очаг». Расстояние между «Вёсочкой» и «Чугункой» равно 120 км, расстояние между кафе «Колорадо» и «Очаг» равно 250 км. А расстояние между «Вёсочкой» и «Колорадо» равно расстоянию между «Чугункой» и «Стрекоза».<br><br>Чему равно расстояние между кафе «Стрекоза» и «Очаг»?</p>
+            <p>Вдоль скоростной автострады расположены мини-кафе «Вёсочка», «Чугунка», «Колорадо», «Стрекоза», «Очаг» в указанном порядке. Расстояние между «Вёсочкой» и «Чугункой» равно 120 км, расстояние между кафе «Колорадо» и «Очаг» равно 250 км. А расстояние между «Вёсочкой» и «Колорадо» равно расстоянию между «Чугункой» и «Стрекоза».<br><br>Чему равно расстояние между кафе «Стрекоза» и «Очаг»?</p>
             
     </div>
     <div class="button">
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Изобрази схему расположения всех мини-кафе, обозначая их начальными буквами их названий.',
-      confirmButtonColor: '#800080',
+      confirmButtonColor: '#00ff00',
 })">Подсказка</a>
     
     </div>
