--- a/3.3.G.html
+++ b/3.3.G.html
@@ -31,7 +31,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Из журнала Катя случайно вырвала часть листов, состоящую из подряд идущих листов. Оказалось, что номера первой и последней его страниц – трёхзначные числа, в записи каждого из которых участвуют только цифры 1, 2, 5.<br><br>Сколько страниц содержит вырванный кусок?</p>
+            <p>Из журнала Катя случайно вырвала часть подряд идущих листов. Оказалось, что номера первой и последней его страниц – трёхзначные числа, в записи каждого из которых участвуют только цифры 1, 2, 5.<br><br>Сколько страниц содержит вырванный кусок?</p>
             
     </div>
     <div class="button">
