--- a/3.3.P.html
+++ b/3.3.P.html
@@ -31,7 +31,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Из журнала Катя случайно вырвала часть листов, состоящую из подряд идущих листов. Оказалось, что номера первой и последней его страниц – трёхзначные числа, в записи каждого из которых участвуют только цифры 1, 2, 5.<br><br>Сколько страниц содержит вырванный кусок?</p>
+            <p>Из журнала Катя случайно вырвала часть подряд идущих листов. Оказалось, что номера первой и последней его страниц – трёхзначные числа, в записи каждого из которых участвуют только цифры 1, 2, 5.<br><br>Сколько страниц содержит вырванный кусок?</p>
             
     </div>
     <div class="button">
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Какая бы часть ни была вырвана, его первая страница имеет нечётный номер, а последняя – чётный. Составь всевозможные трёхзначные числа, каждое из которых содержит только цифры 1, 2 и 5.',
-      confirmButtonColor: '#800080',
+      confirmButtonColor: '#00ff00',
 })">Подсказка</a>
     
     </div>
