--- a/3.4.P.html
+++ b/3.4.P.html
@@ -50,7 +50,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Поскольку на каждом ходу выбрасывается хотя бы одна фишка, то рано или поздно либо Федя, либо Аня окажется без фишек, т.е. игра закончится. После каждого хода сумма всех чисел на Фединых фишках и сумма всех чисел Аниных фишках уменьшается на одинаковое число (своё для каждого хода). Игра, очевидно, закончится, как только сумма чисел у кого-либо станет нулевая – тот и проиграет. Чтобы просчитать общую сумму на фишках, оставшихся у победителя, нужно использовать все фишки, т.е. фишки до игры, и уже с ними проводить некоторые расчёты.',
-      confirmButtonColor: '#800080',
+      confirmButtonColor: '#00ff00',
       customClass: 'swal-wide',
 })">Подсказка</a>
     
