--- a/3.5.P.html
+++ b/3.5.P.html
@@ -40,7 +40,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Впиши в пустую клетку верхней строки число а, а в пустую клетку нижней строки – число b. Поскольку суммы чисел в левых верхнем и нижнем квадратах 2 х 2 совпадают и эти два квадрата имеют две общие клетки. Составь соответствующее этому условию уравнение. Аналогично проделайте тоже самое и для правого верхнего и правого нижнего квадратов 2 х 2. Тоже составь соответствующее этому условию уравнение.',
-      confirmButtonColor: '#800080',
+      confirmButtonColor: '#00ff00',
 })">Подсказка</a>
     
     </div>
