--- a/4.1.P.html
+++ b/4.1.P.html
@@ -50,7 +50,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Пусть x – число точных попаданий Феди, а значит, согласно условию, и число оплаченных им метаний. Выясните, на сколько дротиков уменьшалось у Феди после каждого промаха, и на сколько дротиков увеличивалось после каждого попадания. Составь 2 уравнения: 1.Количество метаний, если последним дротиком Федя не смог попасть в шарик. 2.Количество ментаний, если последний дротик у него забрали. Из двух составленных уравнений откинь неверное(для данного условия), а из верного найди то, что нужно.',
-      confirmButtonColor: '#800080',
+      confirmButtonColor: '#00ff00',
       customClass: 'swal-wide',
 })">Подсказка</a>
     
