--- a/4.3.G.html
+++ b/4.3.G.html
@@ -36,14 +36,14 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Коля, Ира, Аня и Федя – друзья. Однажды они решили померяться своим ростом. Для этого они выстроились в один ряд в порядке убывания их роста (среди них нет имеющих одинаковый рост). Затем Федя и Коля поменялись местами, Ира и Аня также поменялись местами. Оказалось, что теперь друзья стоят в порядке возрастания их роста.<br><br>Кто самый высокий из друзей? В ответ запиши его имя.</p>
+            <p>Коля, Ира, Аня и Федя – друзья. Однажды они решили выяснить, кто из них выше всех. Для этого они выстроились в один ряд в порядке убывания их роста (среди них нет имеющих одинаковый рост). Затем Федя и Коля поменялись местами, Ира и Аня также поменялись местами. Оказалось, что теперь друзья стоят в порядке возрастания их роста.<br><br>Кто самый высокий из друзей, если известно, что Коля выше Ани, но ниже Иры? В ответ запиши его имя.</p>
             
     </div>
     <div class="button">
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      text:'Если бы при обмене местами самый высокий из ребят поменялся с каким-нибудь другом среднего роста, то в получившемся ряду он стоял бы не с краю, т.е. в этом ряду ребята стояли бы не по росту, что противоречит условию. Следовательно, менялись местами ребята в следующих двух парах: одна пара – самый высокий и самый низкий, другая пара состоит из ребят среднего роста. Исходя из этого, несложно будет узнать, кто из друзей не просто самый высокий, но и кто какого роста.',
+      text:'Если бы при обмене местами самый высокий из ребят поменялся с каким-нибудь другом среднего роста, то в получившемся ряду он стоял бы не с краю, т.е. в этом ряду ребята стояли бы не по росту, что противоречит условию. Следовательно, менялись местами ребята в следующих двух парах: одна пара – самый высокий и самый низкий, другая пара состоит из ребят среднего роста. Исходя из этого, несложно будет узнать, кто из друзей самый высокий.',
       confirmButtonColor: '#00ff00',
       customClass:'swal-wide',
 })">Подсказка</a>
