--- a/4.3.R.html
+++ b/4.3.R.html
@@ -28,7 +28,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Коля, Ира, Аня и Федя – друзья. Однажды они решили померяться своим ростом. Для этого они выстроились в один ряд в порядке убывания их роста (среди них нет имеющих одинаковый рост). Затем Федя и Коля поменялись местами, Ира и Аня также поменялись местами. Оказалось, что теперь друзья стоят в порядке возрастания их роста.<br><br>Кто самый высокий из друзей? В ответ запиши его имя.</p>
+            <p>Коля, Ира, Аня и Федя – друзья. Однажды они решили выяснить, кто из них выше всех. Для этого они выстроились в один ряд в порядке убывания их роста (среди них нет имеющих одинаковый рост). Затем Федя и Коля поменялись местами, Ира и Аня также поменялись местами. Оказалось, что теперь друзья стоят в порядке возрастания их роста.<br><br>Кто самый высокий из друзей, если известно, что Коля выше Ани, но ниже Иры? В ответ запиши его имя.</p>
     </div>
     <form action="" method="get">
         <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
