--- a/4.4.G.html
+++ b/4.4.G.html
@@ -28,14 +28,14 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>В мультике «38 попугаев» попугай ввёл единицу измерения длины «в попугаях». Точно так же можно измерять «в слонёнках» и «в мартышках».Так вот, длина удава «в попугаях» составила 32, а его же длина «в слонёнках» - всего 2.<br><br>Чему равна длина удава «в мартышках», если известно, что длина слонёнка «в мартышках» равна длине мартышки «в попугаях»?</p>
+            <p>В мультике «38 попугаев» попугай ввёл единицу измерения длины в «попугаях». Точно так же можно измерять «в слонёнках» и в «мартышках».Так вот, длина удава составила 32 «попугая» или 2 «слонёнка».<br><br>Чему равна длина удава в «мартышках», если известно, что длина слонёнка в «мартышках» равна длине мартышки в «попугаях»?</p>
             
     </div>
     <div class="button">
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      text:'Длина удава «в попугаях» равна 32, а его же длина «в слонёнках» - всего 2, значит длина слонёнка «в попугаях» равна 32 : 2 = 16. Пусть в слонёнке – x мартышек, но в каждой «мартышке» – x попугаев, поэтому длина слонёнка «в попугаях» = x*x.	',
+      text:'Длина удава в «попугаях» равна 32, а его же длина в «слонёнках» - всего 2, значит длина слонёнка в «попугаях» равна 32 : 2 = 16. Пусть в слонёнке – x «мартышек», но в каждой мартышке – x «попугаев», поэтому длина слонёнка в попугаях = x*x.	',
       confirmButtonColor: '#00ff00',
 
 })">Подсказка</a>
