--- a/4.4.R.html
+++ b/4.4.R.html
@@ -28,7 +28,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>В мультике «38 попугаев» попугай ввёл единицу измерения длины «в попугаях». Точно так же можно измерять «в слонёнках» и «в мартышках».Так вот, длина удава «в попугаях» составила 32, а его же длина «в слонёнках» - всего 2.<br><br>Чему равна длина удава «в мартышках», если известно, что длина слонёнка «в мартышках» равна длине мартышки «в попугаях»?</p>
+            <p>В мультике «38 попугаев» попугай ввёл единицу измерения длины в «попугаях». Точно так же можно измерять «в слонёнках» и в «мартышках».Так вот, длина удава составила 32 «попугая» или 2 «слонёнка».<br><br>Чему равна длина удава в «мартышках», если известно, что длина слонёнка в «мартышках» равна длине мартышки в «попугаях»?</p>
     </div>
     <form action="" method="get">
         <input id="answer" placeholder="Ваш ответ"  type="answer" autocomplete="off"><br><br>
