--- a/5.2.P.html
+++ b/5.2.P.html
@@ -31,7 +31,7 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-           <p>Число 111...1а кратно 9.	<br><br> Чему равно а, если количество единиц в числе равно 2020?</p>
+           <p>Число 111...1а кратно 9.	<br><br> Чему равно а, если количество единиц в числе 2020?</p>
             
     </div>
     <div class="button">
