--- a/5.4.G.html
+++ b/5.4.G.html
@@ -35,7 +35,7 @@
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      text:'Пусть x – величина угла ∠LMN. Треугольник MNL равнобедренный (ML = NL по условию), тогда x = ∠LNM = ∠LMN. По теореме внешнего угла треугольника найди ∠ NLK. Треугольник MLK равнобедренный, тогда ∠LMK = ∠MLK. Из Треугольника MKL найдём ∠MKL. MN = MK, то ∠MNL=∠MKL. ',
+      text:'Пусть x – величина угла ∠LMN. Треугольник MNL равнобедренный (ML = NL по условию), тогда x = ∠LNM = ∠LMN. По теореме внешнего угла треугольника найди ∠ MLK. Треугольник MLK равнобедренный, тогда ∠LMK = ∠MLK. Из Треугольника MKL найдём ∠MKL. MN = MK, то ∠MNL=∠MKL. ',
       confirmButtonColor: '#00ff00',
       width: '50%',
 })">Подсказка</a>
