--- a/5.4.P.html
+++ b/5.4.P.html
@@ -38,7 +38,7 @@
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      text:'Пусть х - величина ∠LMN. По теореме внешнего угла треугольника найди ∠ NLK. Из треугольника MKL найди ∠MKL. MN = MK, тогда ∠MNL=∠MKL.',
+      text:'Пусть х - величина ∠LMN. По теореме внешнего угла треугольника найди ∠ MLK. Из треугольника MKL найди ∠MKL. MN = MK, тогда ∠MNL=∠MKL.',
       confirmButtonColor: '#800080',
 })">Подсказка</a>
     
