--- a/5.5.G.html
+++ b/5.5.G.html
@@ -35,7 +35,7 @@
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      text:'Из условия следует, что 50 человек решили одну задачу, 30 – по 2 задачи и 25 – по 3 задачи. Рассчитай, сколько задач решили все эти участники. Предположи и затем посчитайте общее количество решённых задач, если бы каждый из оставшихся участников решил не более 4 задач. ',
+      text:'Из условия следует, что 50 человек решили одну задачу, 30 - по 2 задачи и 25 - по 3 задачи. Тогда оставшихся 45 участников решили 366-50*1+30*2+25*3 задач. Пусть х - количество участников, решивших пять задач, тогда 45-х - решили по четыре задачи. Составь уравнение, используя эти данные, и найди значение х.',
       confirmButtonColor: '#00ff00',
       width: '50%',
 })">Подсказка</a>
