--- a/5.5.P.html
+++ b/5.5.P.html
@@ -38,8 +38,9 @@
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      text:'Посчитай, сколько учеников решило по одной, две и три задачи. Рассчитай, сколько задач решили все эти участники. Предположи и затем посчитай общее количество решённых задач, если бы каждый из оставшихся участников решил не более 4 задач.',
+      text:'Из условия следует, что 50 человек решили одну задачу, 30 – по 2 задачи и 25 – по 3 задачи. Рассчитай, сколько задач решили все эти участники. Исходя из количества оставшихся участников и решённых ими задач, составь уравнение, где х - количество участников решивших 5 задач.',
       confirmButtonColor: '#800080',
+      width: '50%',
 })">Подсказка</a>
     
     </div>
