--- a/2.3.P.html
+++ b/2.3.P.html
@@ -38,13 +38,13 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Во время проведения конкурса по рисованию среди детей 10 - 12 лет каждому участнику были выданы 1 альбомный лист, 1 простой карандаш и 1 набор красок (с кистью в наборе). Всего у организаторов было 60 альбомных листов, а количество простых карандашей было в два раза больше, чем наборов красок. После окончания конкурса выяснилось, что число красок, которые не раздали, в два раза меньше числа альбомных листов, которых не раздали, и в три раза меньше числа карандашей, которых не раздали. <br><br>	Сколько детей участвовало в конкурсе по рисованию?</p>
+            <p>Во время проведения конкурса по рисованию каждому участнику были выданы 1 альбомный лист, 1 простой карандаш и 1 набор красок (с кистью в наборе). Всего у организаторов было 60 альбомных листов, а количество простых карандашей было в два раза больше, чем наборов красок. После окончания конкурса выяснилось, что число красок, которые не раздали, в два раза меньше числа оставшихся альбомных листов, и в три раза меньше числа оставшихся карандашей. <br><br>Определи количество участников конкурса.</p>
     </div>
     <div class="button">
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      text:'Пусть x - число детей, участвовавших в конкурсе, а y - число наборов красок.Запиши оставшееся после конкурса количество альбомных листов, красок и карандашей. Найди x.',
+      text:'Пусть x - число участников, а y - число наборов красок.Запиши оставшееся после конкурса количество альбомных листов, красок и карандашей. Найди x.',
       confirmButtonColor: '#800080',
 })">Подсказка</a>
     
