--- a/2.4.P.html
+++ b/2.4.P.html
@@ -33,13 +33,13 @@
         <div class="ball">Баллы:<label id="lblScore"></label>
         </div>
         <div class="task">
-            <p>Продавец закупил партию ручек и продал их. При этом некоторые покупатели купили одну ручку за 13 рублей, а некоторые купили 3 ручки за 43 рублей. Оказалось, что с каждой покупки продавец получал одинаковую прибыль. <br><br>Найдите цену, по которой продавец закупил ручки.</p>
+            <p>Продавец закупил одинаковые партии ручек и партии карандашей. За карандаши он заплатил в два раза больше чем за ручки. В своём магазине он продавал ручки по 13 рублей за 1 штуку, а какрандаши по 43 за 3 штуки. Оказалось, что с каждой продажи продавец получал одинаковую прибыль. <br><br>Найдите цену, по которой продавец закупил ручки.</p>
     </div>
     <div class="button">
     
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
-      text:'Пусть x - закупочная цена. Составь выражения, отражающие прибыль за одну, а затем и за 3 ручки. Составь уравнение с этими выражениями. Найди x.',
+      text:'Пусть x - закупочная цена ручки. Составь выражения, отражающие прибыль за одну, а затем и за 3 карандаша. Составь уравнение с этими выражениями. Найди x.',
       confirmButtonColor: '#800080',
 })">Подсказка</a>
     
@@ -78,7 +78,7 @@
   
 
   <script type="text/javascript">
-    const answ = '15';
+    const answ = '6';
     const nul = '';
     var transport = window.location.hash.substring(1);
     let Score = Number(transport);
