--- a/4.5.P.html
+++ b/4.5.P.html
@@ -39,7 +39,7 @@
     <a id="help" href="#" onclick="Swal.fire({
       allowOutsideClick:false,
       text:'Рассмотри 2 случая: 1. Если К - лжец. 2. Если К - правдивый.',
-      confirmButtonColor: '#800080',
+      confirmButtonColor: '#00ff00',
 })">Подсказка</a>
     
     </div>
