--- a/sbornik.html
+++ b/sbornik.html
@@ -33,9 +33,13 @@
 <div id ="accordion" class="accordion">
   <h3>Решение</h3>
   <div class="answer ">
-    <p>Нужно посадить деревья так, чтобы расстояние d между соседними деревьями было одно и тоже и являлось наибольшим из возможных (именно в этом случае количество деревьев будет минимальным).<br>
-Найди наибольший общий делитель чисел 56, 16 и 96. Отношение длины всей аллеи к найденному НОДу даст общее количество деревьев, которые должны расти вдоль аллеи, чтоб выполнялись условия задачи. К полученному значению необходимо одно дерево, от которого ведется отсчет, и отнять те четыре, что уже растут.<br><br>
-   <img src="imgS/1.1.jpg"><br><br><b1>Ответ:18</b1></p></div></div>
+        <p>Нужно посадить деревья так, чтобы расстояние d между соседними деревьями было одно и тоже и являлось наибольшим из возможных (именно в этом случае количество деревьев будет минимальным).<br>
+Найди наибольший общий делитель чисел 56, 16 и 96. Отношение длины всей аллеи к найденному НОДу даст общее количество деревьев, которые должны расти вдоль аллеи, чтоб выполнялись условия задачи. К полученному значению необходимо одно дерево, от которого ведется отсчет, и отнять те четыре, что уже растут.<br><br></p>
+                                <!--для компа-->
+<div class="container-fluid d-none d-lg-block"><img src="imgS/1.1.jpg"></div>
+                                <!--для телефона-->
+<div class="container-fluid d-lg-none"><img src="imgS/1.1.jpg" width="290"></div>
+    <br><br><b1>Ответ:18</b1></div></div>
                               <!--1.2-->
   <div class="task">
      <b>Задача 2</b><br>
